--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -8,11 +8,38 @@ body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+a:hover{
+  color: #938c8c;
+  text-decoration: line-through;
+}
+
+.navbar-inverse{
+  background-color: #ffffff;
+  border-color: rgba(8, 8, 8, 0.25);
+}
+
+.navbar-brand{
+  padding: 5px 15px;
+}
+
+.profile-pic{
+  height: 40px;
+  width: 40px;
+  border-color: #000000;
+  display: block;
+}
+
+.navbar-inverse .navbar-nav>li>a{
+  color: #000000;
+  font-family: Courier New, Times New Roman, serif;
+}
+
 .header-image {
     display: block;
     width: 100%;
+    height: 70%;
     text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
+    background: url('../img/NYC.jpg') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -24,17 +51,29 @@ body {
 }
 
 .headline h1 {
-    font-size: 130px;
+    font-family: "Bookman Old Style", "Times New Roman", Times, serif;
+    font-size: 85px;
     background: #fff;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.65);
+    border-radius: 20px;
 }
+
 
 .headline h2 {
-    font-size: 77px;
+    font-family: "Courier New", "Times New Roman", Times, serif;
+    font-size: 50px;
     background: #fff;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.65);
+    border-radius: 20px;
 }
 
+.socials{
+  font-family: "Courier", "Arial", serif;
+}
+
+.featurette#connect{
+  text-align:center;
+}
 .featurette-divider {
     margin: 80px 0;
 }
@@ -61,7 +100,7 @@ footer {
 
 @media(max-width:1200px) {
     .headline h1 {
-        font-size: 140px;
+        font-size: 80px;
     }
 
     .headline h2 {
