--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -8,6 +8,10 @@ body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+p{
+   font-family: "Helvetica", Arial, Sans-Serif;
+}
+
 a:hover{
   color: #938c8c;
   text-decoration: line-through;
