--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -39,7 +39,7 @@ a:hover{
     width: 100%;
     height: 70%;
     text-align: center;
-    background: url('../img/workspace1.jpg') no-repeat center center scroll;
+    background: url('../img/MacbookBible.jpg') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
