--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -8,7 +8,7 @@ body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
-a:hover{
+.menu-item:hover{
   color: #938c8c;
   text-decoration: line-through;
 }
