--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -8,9 +8,8 @@ body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
-.menu-item:hover{
-  color: #938c8c;
-  text-decoration: line-through;
+.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover{
+    color: ##b2b2b2;
 }
 
 .navbar-inverse{
