--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -8,8 +8,12 @@ body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
-.navbar-inverse .navbar-nav>li>a:focus, .navbar-inverse .navbar-nav>li>a:hover{
+.navbar-inverse .navbar-nav>li>a:hover{
     color: #b2b2b2;
+}
+
+.navbar-inverse .navbar-nav>li>a:focus{
+    color: #000000;
 }
 
 .navbar-inverse{
