--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -8,6 +8,16 @@ body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
+.lang-logo{
+    width: 50px;
+    height: 50px;
+    display: block;
+}
+
+.language-logo{
+    padding: 5px 15px;
+}
+
 .navbar-inverse .navbar-nav>li>a:hover{
     color: #b2b2b2;
 }
