--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -6,6 +6,8 @@
 
 body {
     margin-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    text-align: center;
+    
 }
 
 .lang-logo{
