--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -11,9 +11,10 @@ body {
 }
 
 .lang-logo{
-    width: 50px;
-    height: 50px;
+    width: inherit;
+    height: 70px;
     display: inline-block;
+    padding: 15px;
 }
 
 .language-logo{
