--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -109,6 +109,7 @@ body {
 .featurette-heading {
     font-size: 50px;
     text-align: center;
+    font-family: Century Gothic,Times New Roman, serif;
 }
 
 .lead{
